    the MathML reader now checks that a <math> element or the body
    of a <lambda> element use appropriate tags as detailed
    in the schema for the subset of MathML supported.
    
  - The MATLAB binding now correctly identifies the use of the csymbol
    delay and provides the information to the user in a similar fashion
    to csymbol time.

* Bug fixes:

  - Tracker issue #2157800
    When csymbol time was used in a functionDefinition it was not being
    correctly considered as a numeric value.

  - Tracker issue #2189194
    bzip2-compression could cause a crash problem. 
    Thanks to Florian Kamm for reporting this bug and providing a patch.

  - Tracker issue #2188734
    "&amp;" (a predefined entity reference of ampersand) in an attribute value 
    was wrongly converted to "&amp;#38;" when libXML used as an underlying XML
    parser. Thanks to Chen Li for reporting this bug.

  - Tracker issue #2146714
    syncAnnotation() functions in SBase, Model, and SpeciesReference class
    could internally delete an old annotation object (XMLNode*) in an SBase
    object. This could lead to an invalid pointer to an already deleted  
    annotation object when syncAnnotation() functions are internally invoked 
    from getAnnotation() function. Thanks to Ralph Gauges for reporting this.

  - The SBMLWriter::writeSBML() function could create a zip file in which 
    an SBML file is stored with its path name.
    Thanks to Florian Kamm for reporting this bug.

  - Tracker issue #2136530
    When adding a child to an XMLNode marked as an 'end' node the XMLNode
    remained marked as an 'end' node.  This caused incorrect xml to be
    written out.  Thanks to Ralph Gauges for reporting this.

  - A missing 'level' or 'version' attribute was not being correctly
    reported.

  - Tracker issue #2082584.
    Fixed memory leak reported by Jonathan Cooper.
    
  - Tracker issue #2086644.
    Validation was crashing when checking the math/units of an